--- a/starter/07-Omnifood-Desktop/css/style.css
+++ b/starter/07-Omnifood-Desktop/css/style.css
@@ -42,94 +42,6 @@ body {
 }
 
 
-/****************************************/
-/* GENERAL COMPONENTS */
-/****************************************/
-
-.container {
-    max-width: 120rem;
-    padding: 0 3.2rem;
-    margin: 0 auto;
-}
-
-.grid {
-    display: grid;
-    gap: 9.6rem;
-}
-
-.grid--2--cols {
-    grid-template-columns: repeat(2, 1fr);
-}
-
-.grid--3--cols {
-    grid-template-columns: repeat(3, 1fr);
-}
-
-.heading-primary,
-.heading-secondary,
-.heading-tertiary, {
-    font-weight: 700;
-    letter-spacing: -0.5px;
-    color: #333;
-}
-
-.heading-primary {
-    font-size: 5.2rem;
-    line-height: 1.05;
-    margin-bottom: 3.2rem;
-}
-
-.heading-secondary {
-    font-size: 4.4rem;
-    line-height: 1.2;
-}
-
-.subheading {
-    display: block;
-    font-size: 2rem;
-    font-weight: 500;
-    color:#e67e22;
-    margin-bottom: 1.6rem;
-}
-
-.heading-tertiary {
-
-}
-
-.btn:link,
-.btn:visited {
-    text-decoration: none;
-    font-size: 2rem;
-    padding: 1.6rem 3.2rem;
-    border-radius: 1rem;
-    font-weight: 600;
-    transition: all 1s;
-}
-
-.btn--full:link,
-.btn--full:visited {
-    background-color: #e67e22;
-    color: white;
-}
-.btn--full:hover,
-.btn--full:active {
-    background-color: #cf711f;
-}
-
-
-.btn--outline:link,
-.btn--outline:visited {
-    background-color: #fff;
-    color:#555;
-}
-
-.btn--outline:hover,
-.btn--outline:active {
-    background-color: #fdf2e9;
-
-    /* border inside */
-    box-shadow: inset 0 0 0 3px white;
-}
 
 /****************************************/
 /* HEADER */
@@ -270,3 +182,51 @@ body {
 .step-img {
     width: 50%;
 }
+
+.step-number {
+    font-size: 8.1rem;
+    font-weight: 600;
+    color:#ddd;
+    margin-bottom: 1.2rem;
+}
+
+.step-description {
+    font-size: 1.8rem;
+    line-height: 1.8;
+}
+
+.step-img-box {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items:center;
+}
+
+.step-img {
+    width: 35%;
+}
+.step-img-box::after,
+.step-img-box::before {
+   content: "";
+    display: block;    
+    border-radius: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+           
+}
+
+.step-img-box::before{
+    width: 60%;
+    padding-bottom: 60%;
+    background-color: #fdf2e9;
+    z-index: -2; 
+}
+
+.step-img-box::after {
+    width: 45%;
+    padding-bottom: 45%;
+    background-color:#fae5d3;
+   z-index: -1;
+ }
