--- a/starter/07-Omnifood-Desktop/css/style.css
+++ b/starter/07-Omnifood-Desktop/css/style.css
@@ -230,3 +230,37 @@ body {
     background-color:#fae5d3;
    z-index: -1;
  }
+
+ /****************************************/
+/* Featured in */
+/****************************************/
+
+.section-featured {
+    padding: 4.8rem 0 3.2rem 0;
+}
+
+.header-fetured-in {
+    font-size: 1.4rem;
+    text-transform: uppercase;
+    letter-spacing: 0.75px;
+    font-weight: 500;
+    text-align: center;
+    margin-bottom: 2.4rem;
+    color:#888;
+}
+
+.logos {
+    display: flex;
+    justify-content: space-around;
+}
+
+.logos img {
+    height: 3.2rem;
+    filter: brightness(0);
+    opacity: 50%;
+}
+
+.logos img:hover {
+    filter:none;
+    opacity: 100%;
+}
