--- a/starter/07-Omnifood-Desktop/css/general.css
+++ b/starter/07-Omnifood-Desktop/css/general.css
@@ -11,7 +11,7 @@
 .grid {
     display: grid;
     row-gap: 9.6rem;
-    column-gap: 4.8;
+    column-gap: 4.8rem;
 }
 
 .grid--2--cols {
@@ -93,4 +93,26 @@
 
     /* border inside */
     box-shadow: inset 0 0 0 3px white;
+}
+
+.margin-bottom-md {
+    margin-bottom: 4.8rem !important;
+}
+
+.link:link,
+.link:visited {
+    text-decoration: none;
+    color: #e67e22;
+    border-bottom: 1px solid currentColor;
+    padding-bottom: 2px;
+}
+
+.link:hover,
+.link:active {
+    color: #cf711f;
+    border-bottom: 1px solid transparent;
+}
+
+.center {
+    text-align:center;
 }
